<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sit11.msprasad.mobille_phones.Samsung"
    tools:showIn="@layout/activity_samsung">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/_1_samsung_galaxy_note_8"
                    android:textSize="20sp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/sam1"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4"
                    android:layout_marginTop="13dp"
                    app:srcCompat="@drawable/samsunggalaxynote8" />
            </TableRow>


            <TableRow>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/sam1"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/_2_samsung_galaxy_s8"
                    android:textSize="20sp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </TableRow>


            <TableRow>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4"
                    android:layout_marginTop="13dp"
                    app:srcCompat="@drawable/samsung_s8" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/sam2"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/_3_samsung_galaxy_s8_plus"
                    android:textSize="20sp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </TableRow>


            <TableRow>

                <ImageView
                    android:id="@+id/sam3"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4"
                    android:layout_marginTop="13dp"
                    app:srcCompat="@drawable/samsunggalaxys8plus" />
            </TableRow>




            <TableRow>
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/sam4"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/_4_samsung_galaxy_a8"
                    android:textSize="20sp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/sam4"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4"
                    android:layout_marginTop="13dp"
                    app:srcCompat="@drawable/samsunggalaxya8" />
            </TableRow>






            <TableRow>
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/sam5"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/_5_samsung_galaxy_s7"
                    android:textSize="20sp"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </TableRow>



            <TableRow>

                <ImageView
                    android:id="@+id/sam5"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4"
                    android:layout_marginTop="13dp"
                    app:srcCompat="@drawable/samsunggalaxys7" />
            </TableRow>




            <TableRow>
                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/sam6"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>

</ScrollView>
